ros2_ws/log/build_2021-05-19_21-17-51/robot_description/stderr.log
  File "/home/mpt/Desktop/assgn2/ros2_ws/install/robot_description/lib/python3.8/site-packages/robot_description/user_input.py", line 34
    self.get_logger().info('Bug_srv is not available, waiting again...'+str(counter+=1))
                                                                                   ^
SyntaxError: invalid syntax

